fix(start pipeline): fix the test file and the async problem with copying into vm + running pipeline

--- a/test/woodpecker.yaml
+++ b/test/woodpecker.yaml
@@ -1,3 +1,7 @@
+when:
+  - event: [push, pull_request, pull_request_closed, tag, release, deployment, cron, manual]
+    branch: '**'
+
 steps:
   - name: build
     image: debian
